--- a/debugging/change_background.html
+++ b/debugging/change_background.html
@@ -21,19 +21,17 @@
 
 <h2>Click the button to change the background color</h2>
 
-<!-- Corriger l'ID du bouton -->
 <button id="colorButton">Change Color</button>
 
 <script>
-    // Lier l'événement au bon ID
     document.getElementById("colorButton").addEventListener("click", function() {
         changeBackgroundColor();
     });
 
     function changeBackgroundColor() {
-        // Générer une couleur aléatoire
-        var randomColor = "#" + Math.floor(Math.random() * 16777215).toString(16);
-        // Changer la couleur d'arrière-plan du document
+        // Generate a random color
+        var randomColor = "#" + Math.floor(Math.random()*16777215).toString(16);
+        // Change the background color of the body
         document.body.style.backgroundColor = randomColor;
     }
 </script>
